little code refactoring : use .valueOf instead of new for Integer, Character, etc.
git-svn-id: https://svn.apache.org/repos/asf/incubator/clerezza/trunk/org.apache.clerezza.parent@905079 13f79535-47bb-0310-9956-ffa450edef68